--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </body>
 
   <script type="text/javascript">
-    var app = Elm.Hello.fullscreen();
+    var app = Elm.Bracket.fullscreen();
   </script>
 
 </html>
