--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Hello World</title>
+    <title>Bracket Validator</title>
     <script type="text/javascript" src="elm.js"></script>
     <link rel="stylesheet" href="style.css">
   </head>
